2022/manifests/changelog/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ${NAMESPACE}
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: ${NAMESPACE}
spec:
  serviceName: db
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - postgres
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: postgres
          # https://hub.docker.com/_/postgres
          image: postgres:12.6
          resources:
            requests:
              cpu: 2
              memory: 4Gi
            limits:
              cpu: 2
              memory: 4Gi
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-local-ssd
              mountPath: /var/lib/postgresql/data
            - name: docker-entrypoint-initdb
              mountPath: "/docker-entrypoint-initdb.d"
      volumes:
        - name: db-local-ssd
          persistentVolumeClaim:
            claimName: db-local-ssd
        - name: docker-entrypoint-initdb
          emptyDir: {}
